--- a/frontend/admin/game.html
+++ b/frontend/admin/game.html
@@ -234,36 +234,11 @@
                     <!-- Заполняется через JS -->
                 </div>
                 <div style="display: flex; gap: 12px; margin-top: 16px; flex-wrap: wrap;">
-                    <button class="btn btn-secondary" id="randomRolesBtn">🎲 Случайная раздача</button>
                     <button class="btn btn-success" id="applyRolesBtn">✅ Применить роли на оверлей</button>
                 </div>
             </div>
 
-            <!-- Лучший ход -->
-            <div class="game-section" id="bestMoveSection" style="display: none;">
-                <h3>📝 Лучший ход (ЛХ)</h3>
-                <div class="form-group">
-                    <label>Первый убитый:</label>
-                    <select id="firstKilledSelect" class="form-select">
-                        <option value="">Выберите игрока</option>
-                    </select>
-                </div>
-                <div class="form-group">
-                    <label>ЛХ игрока (3 подозреваемых):</label>
-                    <div class="best-move-grid">
-                        <select id="suspect1" class="form-select">
-                            <option value="">Подозреваемый 1</option>
-                        </select>
-                        <select id="suspect2" class="form-select">
-                            <option value="">Подозреваемый 2</option>
-                        </select>
-                        <select id="suspect3" class="form-select">
-                            <option value="">Подозреваемый 3</option>
-                        </select>
-                    </div>
-                </div>
-                <button class="btn btn-success" id="applyBestMoveBtn">✅ Отобразить ЛХ на оверлее</button>
-            </div>
+            bestMoveSection
 
             <!-- Выставление на голосование -->
             <div class="game-section" id="nomineesSection" style="display: none;">
