--- a/frontend/admin/game.html
+++ b/frontend/admin/game.html
@@ -345,7 +345,8 @@
         </div>
     </div>
 
-    <script src="https://cdn.socket.io/4.6.0/socket.io.min.js"></script>
+<script src="/config.js"></script>
+<script src="https://cdn.socket.io/4.6.0/socket.io.min.js"></script>
     <script src="js/api.js"></script>
     <script src="js/game.js"></script>
 </body>
