--- a/frontend/admin/players.html
+++ b/frontend/admin/players.html
@@ -91,6 +91,7 @@
         </div>
     </div>
 
+<script src="/config.js"></script>
     <script src="js/api.js"></script>
     <script src="js/players.js"></script>
 </body>
