--- a/frontend/admin/tournament.html
+++ b/frontend/admin/tournament.html
@@ -82,6 +82,7 @@
         </div>
     </div>
 
+<script src="/config.js"></script>
     <script src="js/api.js"></script>
     <script src="js/tournament.js"></script>
 <!-- Модальное окно управления игроками -->
