--- a/frontend/admin/players.html
+++ b/frontend/admin/players.html
@@ -91,8 +91,10 @@
         </div>
     </div>
 
+<script src="js/ui.js"></script>
 <script src="/config.js"></script>
-    <script src="js/api.js"></script>
-    <script src="js/players.js"></script>
+<script src="js/api.js"></script>
+<script src="js/players.js"></script>
+
 </body>
 </html>
