--- a/frontend/admin/index.html
+++ b/frontend/admin/index.html
@@ -77,6 +77,7 @@
         </div>
     </div>
 
+<script src="js/ui.js"></script>
 <script src="/config.js"></script>
     <script src="js/api.js"></script>
     <script src="js/tournaments.js"></script>
