--- a/frontend/admin/tournament.html
+++ b/frontend/admin/tournament.html
@@ -46,7 +46,8 @@
         </div>
     </div>
 
-    <script src="js/api.js"></script>
+<script src="js/ui.js"></script>    
+<script src="js/api.js"></script>
     <script src="js/tournament.js"></script>
 
     <!-- Модальное окно управления игроками -->
