--- a/frontend/admin/index.html
+++ b/frontend/admin/index.html
@@ -13,7 +13,7 @@
             <h1>🏆 Админ-панель Мафии</h1>
             <div class="nav-links">
                 <a href="index.html" class="nav-link active">Турниры</a>
-                <a href="players.html" class="nav-link">База игроков</a>
+                <a href="players.html" class="nav-link">Игроки</a>
             </div>
         </nav>
 
@@ -79,7 +79,7 @@
 
 <script src="js/ui.js"></script>
 <script src="/config.js"></script>
-    <script src="js/api.js"></script>
-    <script src="js/tournaments.js"></script>
+<script src="js/api.js"></script>
+<script src="js/tournaments.js"></script>
 </body>
 </html>
