--- a/frontend/admin/players.html
+++ b/frontend/admin/players.html
@@ -13,7 +13,7 @@
             <h1>🏆 Админ-панель Мафии</h1>
             <div class="nav-links">
                 <a href="index.html" class="nav-link">Турниры</a>
-                <a href="players.html" class="nav-link active">База игроков</a>
+                <a href="players.html" class="nav-link active">Игроки</a>
             </div>
         </nav>
 
