--- a/frontend/admin/tournament.html
+++ b/frontend/admin/tournament.html
@@ -12,7 +12,8 @@
         <nav class="navbar">
             <h1>🏆 Админ-панель Мафии</h1>
             <div class="nav-links">
-                <a href="index.html" class="nav-link">← Назад к турнирам</a>
+                <a href="index.html" class="nav-link">Турниры</a>
+                <a href="players.html" class="nav-link">Игроки</a>
             </div>
         </nav>
 
@@ -48,7 +49,7 @@
 
 <script src="js/ui.js"></script>    
 <script src="js/api.js"></script>
-    <script src="js/tournament.js"></script>
+<script src="js/tournament.js"></script>
 
     <!-- Модальное окно управления игроками -->
     <div id="managePlayersModal" class="modal">
