Полностью готовый оверлей. Шлифую админку

--- a/frontend/admin/game.html
+++ b/frontend/admin/game.html
@@ -117,6 +117,16 @@
             color: white;
         }
 
+        .role-btn.eliminated-toggle {
+            border-color: var(--primary);
+            color: var(--primary);
+        }
+
+        .role-btn.eliminated-toggle.active {
+            background: var(--primary);
+            color: #fff;
+        }
+
         .best-move-grid {
             display: grid;
             grid-template-columns: repeat(3, 1fr);
