--- a/frontend/admin/game.html
+++ b/frontend/admin/game.html
@@ -39,7 +39,7 @@
             display: flex;
             gap: 8px;
             flex-wrap: wrap;
-            margin-top: 0;
+            margin-top: 8px;
         }
 
         .position-number {
@@ -53,13 +53,6 @@
             justify-content: center;
             font-weight: 700;
             flex-shrink: 0;
-        }
-
-        .role-buttons {
-            display: flex;
-            gap: 8px;
-            flex-wrap: wrap;
-            margin-top: 8px;
         }
 
         .role-btn {
@@ -89,15 +82,6 @@
             color: white;
         }
 
-        .role-btn.red {
-            border-color: #DC2626;
-        }
-
-        .role-btn.red.active {
-            background: #DC2626;
-            border-color: #DC2626;
-        }
-
         .role-btn.black {
             border-color: #1F2937;
         }
@@ -120,6 +104,7 @@
         .role-btn.eliminated-toggle {
             border-color: var(--primary);
             color: var(--primary);
+            margin-left: 12px;
         }
 
         .role-btn.eliminated-toggle.active {
@@ -306,7 +291,6 @@
                 </div>
                 <div style="display: flex; gap: 12px; margin-top: 16px; flex-wrap: wrap;">
                     <button class="btn btn-success" id="saveSeatingBtn" style="display: none;">✅ Сохранить рассадку</button>
-                    <!-- Кнопка применения ролей удалена, всё обновляется мгновенно -->
                 </div>
             </div>
 
@@ -315,14 +299,10 @@
               <h3>⭐ Лучший ход</h3>
               
               <div id="bestMoveInfo" style="margin-bottom: 16px; padding: 12px; background: var(--bg-secondary); border-radius: 8px;">
-                <p style="color: var(--text-secondary);">Первый убитый будет установлен автоматически после добавления круга 1</p>
+                <p style="color: var(--text-secondary);">ПУ</p>
               </div>
               
               <div class="form-group">
-                <label>Выбрать 3 подозреваемых (в порядке возрастания):</label>
-                <div style="margin-bottom: 8px; color: var(--text-secondary);">
-                  Выбрано: <span id="suspectsDisplay">нет</span>
-                </div>
                 <div id="suspectsButtons" style="display: flex; gap: 8px; flex-wrap: wrap; margin-bottom: 16px;">
                   <!-- Заполняется через JS -->
                 </div>
@@ -331,9 +311,18 @@
               <button class="btn btn-success" id="applyBestMoveBtn">✅ Сохранить ЛХ</button>
             </div>
 
-            <!-- Блоки Выставление + Круги рядом -->
+            <!-- Блоки Круги + Выставление рядом (круги слева, выставленные справа) -->
             <div class="game-section-row">
-                <!-- Выставление на голосование -->
+                <!-- Круги игры (слева) -->
+                <div class="game-section" id="roundsSection" style="display: none; flex: 1;">
+                    <h3>🌙 Управление кругами</h3>
+                    <div id="roundsList">
+                        <!-- Заполняется через JS -->
+                    </div>
+                    <button class="btn btn-primary" id="addRoundBtn">➕ Добавить следующий круг</button>
+                </div>
+
+                <!-- Выставление на голосование (справа) -->
                 <div class="game-section" id="nomineesSection" style="display: none; flex: 1;">
                     <h3>🎯 Выставление на голосование</h3>
                     <div class="form-group">
@@ -348,15 +337,6 @@
                     <div style="display: flex; gap: 12px; flex-wrap: wrap;">
                         <button class="btn btn-danger" id="clearNomineesBtn">🗑️ Очистить всех</button>
                     </div>
-                </div>
-
-                <!-- Круги игры -->
-                <div class="game-section" id="roundsSection" style="display: none; flex: 1;">
-                    <h3>🌙 Управление кругами</h3>
-                    <div id="roundsList">
-                        <!-- Заполняется через JS -->
-                    </div>
-                    <button class="btn btn-primary" id="addRoundBtn">➕ Добавить следующий круг</button>
                 </div>
             </div>
         </div>
@@ -374,7 +354,7 @@
                     <input type="hidden" id="roundNumber">
 
                     <div class="form-group">
-                        <label>🔫 Убийства мафии:</label>
+                        <label>убит:</label>
                         <select id="mafiaKill" class="form-select">
                             <option value="">Выберите игрока</option>
                             <option value="miss">❌ Промах</option>
